# bofip-agentic-rag

./: .dockerignore  .env.example  .gitignore  AUTHORS.md  CITATION.cff  Dockerfile  LICENSE  NEXT_ACTIONS.md  NEXT_CODEX_START_HERE.md  PROJECT_STATUS.md  README.md  ROADMAP.md  SESSION_STATE.json  app.py  config.py  pyproject.toml  requirements.txt  run.bat  test_rag.py
docs/: AGENTIC.md  ARCHITECTURE.md  CHATGPT_REVIEW_DEBATE.md  CV_PROJECT_DOSSIER.md  DATA_CARD.md  DEMO.md  DEPLOYMENT.md  EVALUATION.md  LESSONS.md  REFERENCES.md  RESULTS.md  ROADMAP.md  SYSTEM.md  full_corpus_manifest.json  index.html
notebooks/: 00_raw_structure_audit.executed.ipynb  00_raw_structure_audit.ipynb  01_chunking_and_lexical_audit.executed.ipynb  01_chunking_and_lexical_audit.ipynb  02_multiset_stress_audit.executed.ipynb  02_multiset_stress_audit.ipynb  03_real_examples_parsing_chunking_retrieval.executed.ipynb  03_real_examples_parsing_chunking_retrieval.ipynb  04_two_stage_retrieval_audit.executed.ipynb  04_two_stage_retrieval_audit.ipynb  05_abstention_and_deep_dive_audit.executed.ipynb  05_abstention_and_deep_dive_audit.ipynb  06_stage_comparison_audit.executed.ipynb  06_stage_comparison_audit.ipynb  07_query_workbench.executed.ipynb  07_query_workbench.ipynb  08_v4_benchmark_audit.executed.ipynb  08_v4_benchmark_audit.ipynb  09_llm_preview_workbench.executed.ipynb  09_llm_preview_workbench.ipynb  10_gemini_shadow_eval_workbench.executed.ipynb  10_gemini_shadow_eval_workbench.ipynb
scripts/: ablation.py  benchmark_agentic.py  benchmark_embeddings.py  bootstrap.py  check_setup.py  (+85 more)
(+201 files in other folders)
