[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bofip-agentic-rag"
version = "0.1.0"
description = "Full-corpus BOFiP RAG prototype with hybrid retrieval, reranking, and cited tax answers."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Rapha1503", email = "raphael@bofip-rag.local" }
]
dependencies = [
  "beautifulsoup4==4.12.3",
  "lxml==5.2.2",
  "rank-bm25==0.2.2",
  "nbformat==5.10.4",
  "sentence-transformers==3.0.1",
  "openai==1.35.10",
  "streamlit==1.36.0",
  "numpy==1.26.4",
  "torch==2.3.1",
  "nltk==3.8.1",
]

[project.urls]
Repository = "https://github.com/Rapha1503/bofip-agentic-rag"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 120
target-version = "py311"
